--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,18 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: white) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
+} */
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
@@ -24,4 +28,11 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+/*=== Globally available CSS ===*/
+.container {
+  width: 85%;
+  margin: 0 auto;
+  max-width: 1400px;
 }
