form(mail): added-formsphere-mail-setup

--- a/src/components/styles/contact.module.css
+++ b/src/components/styles/contact.module.css
@@ -47,9 +47,27 @@
   background-color: #1da1f2;
 }
 
+.sent_success {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  background-color: #43a557;
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
+  border-radius: 0.4rem;
+  margin: 3rem 0;
+}
+
 @media screen and (min-width: 499.99px) {
   .form {
     width: 100%;
     max-width: 540px;
+  }
+
+  .sent_success {
+    padding: 4rem;
+    font-size: 2.25rem;
   }
 }
