--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,3 +36,10 @@ body {
   margin: 0 auto;
   max-width: 1400px;
 }
+
+#contact {
+  background-color: white;
+  padding: 2rem 0;
+  border-radius: 0.4rem;
+  box-shadow: 0 0 0.5rem 0 rgba(0, 0, 0, 0.1);
+}
