re-design(hero-section)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,9 +37,85 @@ body {
   max-width: 1400px;
 }
 
+.deem {
+  color: #cfcfcf;
+  font-weight: bold;
+}
+
 #contact {
   background-color: white;
   padding: 2rem 0;
   border-radius: 0.4rem;
   box-shadow: 0 0 0.5rem 0 rgba(0, 0, 0, 0.1);
+}
+
+@keyframes spinSlow {
+  0% {
+    rotate: 0deg;
+  }
+
+  10% {
+    rotate: 90deg;
+  }
+
+  50% {
+    rotate: 200deg;
+  }
+
+  70% {
+    rotate: 360deg;
+  }
+
+  100% {
+    rotate: 0deg;
+  }
+}
+
+@keyframes bumping {
+  0% {
+    transform: translateY(0);
+  }
+
+  10% {
+    transform: translateY(-7px);
+  }
+
+  50% {
+    transform: translateY(2px);
+  }
+
+  70% {
+    transform: translateY(-5px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes bumpingSkew {
+  0% {
+    transform: translateY(0);
+    transform: skewY(0);
+  }
+
+  10% {
+    transform: translateY(-7px);
+    transform: skewY(-0.01turn);
+  }
+
+  50% {
+    transform: translateY(2px);
+    transform: skewY(-0.06turn);
+  }
+
+  70% {
+    transform: translateY(-5px);
+    transform: skewY(-0.02turn);
+  }
+
+  100% {
+    transform: translateY(0);
+    transform: skewY(0);
+  }
 }
