--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,7 +46,6 @@ body {
   background-color: white;
   padding: 2rem 0;
   border-radius: 0.4rem;
-  box-shadow: 0 0 0.5rem 0 rgba(0, 0, 0, 0.1);
 }
 
 @keyframes spinSlow {
@@ -117,5 +116,11 @@ body {
   100% {
     transform: translateY(0);
     transform: skewY(0);
+  }
+}
+
+@media screen and (max-width: 999.9px) {
+  .container {
+    width: 94%;
   }
 }
