--- a/src/components/styles/banner.module.css
+++ b/src/components/styles/banner.module.css
@@ -16,7 +16,9 @@
 .h1_heading {
   color: #2a2b2c;
   font-size: 2.75rem;
+  font-weight: 900;
   filter: drop-shadow(0 1mm 1mm rgba(70, 70, 70, 0.25));
+  margin-bottom: 2.25rem;
 }
 
 .social_links {
@@ -155,12 +157,24 @@
 
   .second_container {
     margin-left: 0;
+    margin-top: 1.5rem;
   }
 
   .second_container h1 {
-    font-size: 1.8rem;
+    font-size: 1.2rem;
     font-weight: 700;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
+  }
+
+  .second_container > i {
+    font-size: 14px;
+  }
+
+  .txt_container {
+    width: 100%;
+    padding: auto 0.25rem;
+    font-size: 16px;
+    margin: auto;
   }
 
   .social_links {
@@ -170,10 +184,6 @@
   .my_image {
     max-width: 250px;
     object-fit: cover;
-  }
-
-  .txt_container {
-    width: 100%;
-    margin: auto;
+    margin-bottom: 1rem;
   }
 }
