--- a/src/components/styles/contact.module.css
+++ b/src/components/styles/contact.module.css
@@ -50,7 +50,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2rem;
+  padding: rem;
   background-color: #43a557;
   color: white;
   font-size: 1.5rem;
@@ -68,5 +68,11 @@
   .sent_success {
     padding: 4rem;
     font-size: 2.25rem;
+  }
+}
+
+@media screen and (max-width: 499.99px) {
+  .heading {
+    font-size: 1.75rem;
   }
 }
