--- a/src/components/styles/project.module.css
+++ b/src/components/styles/project.module.css
@@ -1,23 +1,50 @@
 .container {
   display: flex;
+  position: relative;
   justify-content: space-between;
-  background-color: #fff;
+  background-color: transparent;
   border-radius: 1rem;
   overflow: hidden;
-  filter: drop-shadow(0 1mm 1mm rgba(0, 0, 0, 0.1));
   margin-bottom: 2.5rem;
-  border: 1px dotted rgba(0, 0, 0, 0.15);
+  cursor: pointer;
 }
+
+.container:hover .text_container {
+  scale: 1.05;
+}
+
 .text_container {
   display: flex;
+  position: absolute;
+  width: 47%;
+  max-width: 600px;
+  min-height: 70%;
+  top: calc(15% + 1rem);
+  left: 50%;
+  background-color: white;
   flex-direction: column;
   gap: 0.85rem;
-  padding: 2rem 1rem;
+  padding: 2rem 1rem 2rem 2rem;
+  filter: drop-shadow(0 1mm 1mm rgba(0, 0, 0, 0.1));
+  border: 1px dotted rgba(0, 0, 0, 0.15);
+  border-radius: 0.5rem;
+  text-align: start;
+  transition: all 0.2s ease-in;
+  border: 2px dashed rgba(0, 0, 0, 0.05);
 }
+
+.text_container:nth-child(2n + 1) {
+  background-color: red;
+}
+
 .img_container {
-  max-width: 50%;
-  min-width: 49.9%;
+  max-width: 1000px;
+  min-width: 60%;
+  padding: 0.1rem;
+  border: 1px dashed rgba(0, 0, 0, 0.1);
+  margin: auto 50% auto auto;
 }
+
 .btn {
   background: #1da1f2;
   color: white;
@@ -43,22 +70,67 @@
   gap: 1rem;
 }
 
-@media screen and (max-width: 999.99px) {
+.tags {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+  flex-wrap: wrap;
+}
+
+.tags li {
+  font-size: smaller;
+  background-color: #efefef;
+  padding: 0.3rem;
+  border-radius: 4px;
+}
+
+@media screen and (max-width: 1399.99px) {
+  .project_title {
+    font-size: 1.25rem;
+  }
+
+  .text_container {
+    top: calc(5% + 0.5rem);
+  }
+
+  .text_container p {
+    font-size: small;
+  }
+
+  .tags li {
+    font-size: 10px;
+  }
+}
+
+@media screen and (max-width: 1099.99px) {
   .container {
-    width: 70%;
-    margin: auto auto 2.5rem;
+    position: static;
+    width: 100%;
+    margin: auto;
     align-items: center;
+    gap: 0;
+    margin: 2rem auto 3.5rem;
     flex-direction: column;
   }
 
   .img_container {
-    max-width: 100%;
+    max-width: 89.9%;
+    margin: 0 auto;
+    border: 0;
+    filter: none;
   }
 
   .text_container {
-    width: 100%;
-    margin: auto;
+    position: static;
+    max-width: 940px;
+    width: 69.9%;
     height: auto;
+    margin: -3rem auto auto auto;
+    filter: drop-shadow(0 1mm 1mm rgba(0, 0, 0, 0.1));
+  }
+
+  .text_container p {
+    font-size: 9px;
   }
 }
 
@@ -66,5 +138,26 @@
   .container {
     width: 100%;
     margin: auto auto 1.75rem;
+    padding: 0 0.25rem;
+  }
+
+  .img_container {
+    max-width: 99.9%;
+    margin: 0 auto;
+    border: 0;
+    filter: none;
+  }
+
+  .text_container {
+    position: static;
+    max-width: 940px;
+    width: 94.9%;
+    height: auto;
+    margin: -2rem auto auto auto;
+    filter: drop-shadow(0 1mm 1mm rgba(0, 0, 0, 0.1));
+  }
+
+  .text_container p {
+    font-size: 12px;
   }
 }
