--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,12 +22,10 @@ html {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: url("../../public/inspiration-geometry-1920x1080.png");
+  background-repeat: repeat;
+  backdrop-filter: blur(1px);
+  background-color: white;
 }
 
 /*=== Globally available CSS ===*/
@@ -120,6 +118,9 @@ body {
 }
 
 @media screen and (max-width: 999.9px) {
+  body {
+    backdrop-filter: blur(0);
+  }
   .container {
     width: 94%;
   }
