--- a/src/components/styles/banner.module.css
+++ b/src/components/styles/banner.module.css
@@ -99,6 +99,7 @@
 .btn {
   display: inline-flex;
   justify-content: center;
+  gap: 0.35rem;
   align-items: center;
   padding: 0.75rem 2rem;
   background-color: #ff4d30;
