--- a/src/components/styles/contact.module.css
+++ b/src/components/styles/contact.module.css
@@ -22,9 +22,10 @@
 
 .form input,
 .form textarea {
-  border: 1px solid rgba(48, 51, 54, 0.5);
-  border-radius: 0.35rem;
+  border-left: 0.25rem solid #ff4d30;
+  border-bottom: 0.1rem solid rgba(0, 0, 0, 0.1);
   padding: 0.35rem;
+  padding-left: 1.25rem;
   outline: 0;
 }
 
@@ -43,7 +44,7 @@
   padding: 0.5rem 1.75rem;
   border-radius: 0.35rem;
   color: white;
-  background-color: #1da1f2;
+  background-color: #ff4d30;
 }
 
 .sent_success {
