--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,8 +36,32 @@ body {
 }
 
 .deem {
-  color: #cfcfcf;
+  color: #c7c7c7;
   font-weight: bold;
+}
+
+.deem-sm {
+  color: #c7c7c7;
+  font-weight: 500;
+  font-size: 14px;
+  vertical-align: middle;
+}
+
+.deem-xm {
+  color: #c7c7c7;
+  font-weight: 400;
+  font-size: 12px;
+  vertical-align: middle;
+}
+
+#about .deem,
+#about .deem-sm,
+#about .deem-xm {
+  color: #8e8e8e;
+}
+
+.fw-500 {
+  font-weight: 500 !important;
 }
 
 #contact {
