--- a/src/components/styles/contact.module.css
+++ b/src/components/styles/contact.module.css
@@ -1,5 +1,5 @@
 .contact_area {
-  margin: 40px 0 80px;
+  margin: 80px 0;
 }
 
 .heading {
@@ -14,9 +14,10 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin: 0 auto 0.5rem;
+  margin: 0 0 0.5rem auto;
   gap: 0.75rem;
   padding: 1rem 0.75rem;
+  padding-top: 0;
 }
 
 .form input,
@@ -59,6 +60,52 @@
   margin: 3rem 0;
 }
 
+.contact_info {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-right: auto;
+}
+
+.contact_info h3 {
+  position: relative;
+  padding-left: 1rem;
+  font-weight: 600;
+  line-height: 2rem;
+  font-size: 1.85rem;
+  color: #303336;
+  text-transform: none;
+  margin-bottom: 1.75rem;
+}
+
+.contact_info h3::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  border-left: 0.25rem solid #ff4d30;
+}
+
+.contact_info ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.contact_info ul > li {
+  display: inline-flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.5rem 1rem;
+  color: #303336;
+}
+
+.contact_info ul > li > svg {
+  color: #ff4d30;
+}
+
 @media screen and (min-width: 499.99px) {
   .form {
     width: 100%;
@@ -71,8 +118,23 @@
   }
 }
 
-@media screen and (max-width: 499.99px) {
+@media screen and (max-width: 999.99px) {
+  .contact_info {
+    margin: auto;
+  }
+
+  .form {
+    margin: auto;
+  }
+}
+
+@media screen and (max-width: 499.98px) {
   .heading {
     font-size: 1.75rem;
+  }
+
+  .contact_info ul > li {
+    flex-direction: row-reverse;
+    text-align: right;
   }
 }
