major-updates(v1.0): :zap: final-output-v1-staging

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,7 @@ html {
 }
 
 body {
+  position: relative;
   color: rgb(var(--foreground-rgb));
   background: url("../../public/inspiration-geometry-1920x1080.png");
   background-repeat: repeat;
@@ -146,9 +147,45 @@ body {
   }
 }
 
+.logo_text {
+  color: #3e3e3e;
+  word-spacing: -2px;
+}
+.logo_dot {
+  line-height: 1rem;
+  color: #ff4d30;
+  letter-spacing: -2px;
+}
+
+#hamb {
+  display: none;
+  position: sticky;
+  top: 1rem;
+  left: 87%;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  padding: 5px;
+  background-color: #e54b33;
+  color: white;
+  border-radius: 50%;
+  outline: none;
+  filter: drop-shadow(0 1mm 1mm #ff4d30);
+  z-index: 9999;
+}
+
+.is_hidden {
+  display: none !important;
+}
+
 @media screen and (min-width: 999.99px) {
   #contact .container {
     flex-direction: row;
+  }
+
+  #hamb {
+    display: none;
   }
 }
 
