--- a/src/components/styles/navbar.module.css
+++ b/src/components/styles/navbar.module.css
@@ -3,13 +3,16 @@
   position: sticky;
   top: 0;
   left: 0;
-  border-bottom: 0.1rem solid rgba(0, 0, 0, 0.075);
-  background-color: white;
+  /* border-bottom: 0.1rem solid rgba(0, 0, 0, 0.075); */
+  /* background-color: rgba(255, 0, 0, 0.3); */
   z-index: 999;
+  background-color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(2px);
 }
 
 .nav_container {
-  display: flex;
+  /* display: flex; */
+  display: none;
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
@@ -18,6 +21,7 @@
 
 .left_part > ul {
   display: flex;
+  align-items: center;
 }
 
 .left_part > ul > li {
@@ -47,8 +51,19 @@
   background-color: transparent;
 }
 
+@media screen and (min-width: 999.99px) {
+  .navbar {
+    border-bottom: 2px solid rgba(0, 0, 0, 0.05);
+  }
+
+  .nav_container {
+    display: flex;
+  }
+}
+
 @media screen and (max-width: 499.99px) {
   .nav_container {
+    display: flex;
     justify-content: center;
   }
   .left_part > ul {
